Mainpage link bugfix

--- a/public/index.html
+++ b/public/index.html
@@ -217,8 +217,8 @@ You can find me at: linkedin.com/in/jieqiboh github.com/jieqiboh jieqiboh5836@gm
 I use this site to document stuff i&rsquo;ve done over the years</p>
 <h3 id="you-can-find-me-at">You can find me at:</h3>
 <ul>
-<li><a href="linkedin.com/in/jieqiboh">linkedin.com/in/jieqiboh</a></li>
-<li><a href="github.com/jieqiboh">github.com/jieqiboh</a></li>
+<li><a href="https://linkedin.com/in/jieqiboh">linkedin.com/in/jieqiboh</a></li>
+<li><a href="https://github.com/jieqiboh">github.com/jieqiboh</a></li>
 <li><a href="mailto:jieqiboh5836@gmail.com">jieqiboh5836@gmail.com</a></li>
 </ul>
 
