Fix IOS code weird bug

--- a/public/index.html
+++ b/public/index.html
@@ -130,6 +130,10 @@ You can find me at: linkedin.com/in/jieqiboh github.com/jieqiboh jieqiboh5836@gm
       background-color: var(--code-background-color);
       color: var(--code-color);
       border-radius: 3px;
+      text-size-adjust: 100%;          
+      -ms-text-size-adjust: 100%;      
+      -moz-text-size-adjust: 100%;     
+      -webkit-text-size-adjust: 100%;  
   }
 
   blockquote {
