--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@ You can find me at: linkedin.com/in/jieqiboh github.com/jieqiboh jieqiboh5836@gm
       --text-color: #444;
       --link-color: #3273dc;
       --visited-color:  #FC5185;
-      --code-background-color: #f2f2f2;
+      --code-background-color: #eff1f5;
        
       --blockquote-color: #222;
   }
